<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#131313"
        tools:context=".GameActivity">

        <RelativeLayout
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/btn1"
                style="@style/ButtonStyle"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:tag="00"
                android:text="@string/a"
                android:onClick="buttonClick"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/btn2"
                style="@style/ButtonStyle"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/btn1"
                android:tag="01"
                android:text="@string/b" />

            <Button
                android:id="@+id/btn3"
                style="@style/ButtonStyle"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/btn2"
                android:tag="02"
                android:text="@string/c" />

            <Button
                android:id="@+id/btn4"
                style="@style/ButtonStyle"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/btn3"
                android:tag="03"
                android:text="@string/d" />

            <Button
                android:id="@+id/btn5"
                style="@style/ButtonStyle"
                android:layout_below="@id/btn1"
                android:layout_alignParentStart="true"
                android:tag="04"
                android:text="@string/e" />

            <Button
                android:id="@+id/btn6"
                style="@style/ButtonStyle"
                android:layout_below="@id/btn2"
                android:layout_toEndOf="@id/btn5"
                android:tag="05"
                android:text="@string/f" />

            <Button
                android:id="@+id/btn7"
                style="@style/ButtonStyle"
                android:layout_below="@id/btn3"
                android:layout_toEndOf="@id/btn6"
                android:tag="06"
                android:text="@string/g" />

            <Button
                android:id="@+id/btn8"
                style="@style/ButtonStyle"
                android:layout_below="@id/btn4"
                android:layout_toEndOf="@id/btn7"
                android:tag="07"
                android:text="@string/h" />

            <Button
                android:id="@+id/btn9"
                style="@style/ButtonStyle"
                android:layout_below="@id/btn5"
                android:layout_alignParentStart="true"
                android:tag="08"
                android:text="@string/i" />

            <Button
                android:id="@+id/btn10"
                style="@style/ButtonStyle"
                android:layout_below="@id/btn6"
                android:layout_toEndOf="@id/btn9"
                android:tag="09"
                android:text="@string/j" />

            <Button
                android:id="@+id/btn11"
                style="@style/ButtonStyle"
                android:layout_below="@id/btn7"
                android:layout_toEndOf="@id/btn10"
                android:tag="10"
                android:text="@string/k" />

            <Button
                android:id="@+id/btn12"
                style="@style/ButtonStyle"
                android:layout_below="@id/btn8"
                android:layout_toEndOf="@id/btn11"
                android:tag="10"
                android:text="@string/l" />


            <Button
                android:id="@+id/btn13"
                style="@style/ButtonStyle"
                android:layout_below="@id/btn9"
                android:layout_alignParentStart="true"
                android:tag="10"
                android:text="@string/m"/>

            <Button
                android:id="@+id/btn14"
                style="@style/ButtonStyle"
                android:layout_below="@id/btn10"
                android:layout_toEndOf="@id/btn13"
                android:tag="11"
                android:text="@string/n"/>

            <Button
                android:id="@+id/btn15"
                style="@style/ButtonStyle"
                android:layout_below="@id/btn11"
                android:layout_toEndOf="@id/btn14"
                android:tag="12"
                android:text="@string/o">
            </Button>

            <Button
                android:id="@+id/btn16"
                style="@style/ButtonStyle"
                android:layout_below="@id/btn12"
                android:layout_toEndOf="@id/btn15"
                android:tag="13" >
            </Button>
        </RelativeLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_anchor="@+id/frameLayout"
        app:layout_anchorGravity="top|center" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>